--- a/MID/assignment_1_KNN.ipynb
+++ b/MID/assignment_1_KNN.ipynb
@@ -36,7 +36,7 @@
         "id": "Imu6-x6L2yhj",
         "outputId": "5c058b1b-51dc-45b6-a454-e18f91e46d3e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,7 +75,7 @@
         "id": "6Hs8fbuf5zQr",
         "outputId": "a474d899-dd9d-4bc5-fc6c-6c379d65a940"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
         "id": "o7-te-Bb6TQ7",
         "outputId": "4958e99d-8c2f-4d06-d479-0d0ae39373c1"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
         "id": "iX3PTK6zChQX",
         "outputId": "99348deb-bd5a-4749-8409-3eb2851dc4bf"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
         "id": "y0e2T6paLEBu",
         "outputId": "17d196d5-18e8-4b9c-cb42-6c5b8468b532"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,9 +270,9 @@
           "height": 601
         },
         "id": "VTsbLj2vLnh1",
-        "outputId": "5e947b78-17d7-424b-f811-7ed83a4b55bd"
+        "outputId": "291078e9-ce32-49c6-c183-1666c7f472eb"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,6 +292,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Discussion:\n",
+        "\n",
+        "Manhattan distance (L1 norm) is a distance metric between two points in a N dimensional vector space.Euclidean distance is the shortest distance between two points in an N dimensional space also known as Euclidean space.In the CIFAR-10 dataset in grayscale images Manhattan(L1)  distance is particulary good .It effectively encapsulates fluctuations in pixel intensities, which are essential for discerning objects within the images. In the osther hand , The Euclidean (L2) distance takes into account both the size and orientation of distinctions between data points. It is particularly well-suited for situations where there are correlations or spatial arrangements in the dataset.Grayscale images exhibit a characteristic where the pixel values share a consistent scale, rendering Manhattan distance exceptionally well-suited for this context. As a robust distance metric, Manhattan distance excels in scenarios where features display diverse scales or units. In the case of image data, pixel values maintain a uniform and homogenous scale and unit, aligning perfectly with the strengths of the Manhattan distance metric. In the dataset consider factors such as the dataset's characteristics, the nature of the features, and the complexity of the classes for determining which distance calculation technique is better suited. For the choice of better result between Manhattan and Euclidean distance on dataset characteristics, feature correlation, and the complexity of classes. Both distances exhibited similar trends."
+      ],
+      "metadata": {
+        "id": "RoC2TeioWX2h"
+      }
     }
   ]
 }
